cards de itens, página home elástica, alterando fonte, bug no gap para iOS

--- a/src/GlobalStyle.css
+++ b/src/GlobalStyle.css
@@ -1,17 +1,22 @@
 :root {
   font-size: 62.5%;
-  --primary-color: #e7c891;
-  --background: #1a1a1a;
-  --secondary-color: #819cff;
-  --third-color: #456bf6;
+  --primary-color: #181a20;
+  --background: #35383f;
+  --secondary-color: #ffffff;
 }
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+  overscroll-behavior: unset;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+  "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
-}  
+}
+
+body {
+  background-color: #181a20;
+}
