--- a/src/Pages/Home/homeCss.css
+++ b/src/Pages/Home/homeCss.css
@@ -1,7 +1,11 @@
-.container {
-    background-color: #181a20;
+.containerHome {
+    display: flex;
+    flex-direction: column;
+    
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
+    max-height: max-content;
+
     padding: 20px;
 }
 
@@ -57,6 +61,18 @@
   justify-content: space-between;
 }
 
+.boxTextOfertas2 {
+  display: flex;
+
+  width: 100%;
+  height: 4.5em;
+
+  margin-top: 1.2em;
+
+  align-items: center;
+  justify-content: space-between;
+}
+
 .boxOfertaTituloMaior {
   color: white;
   font-size: 19px;
@@ -83,5 +99,18 @@
 
   margin-top: 5em;
 
+  justify-items: center;
+}
+
+.boxDisplayItensHome {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+
+  width: 100%;
+  max-height: max-content;
+
+  padding: 10px;
+
+  align-items: center;
   justify-items: center;
 }
