--- a/src/Pages/Login/loginCss.css
+++ b/src/Pages/Login/loginCss.css
@@ -1,7 +1,7 @@
-.container {
-    background-color: #181a20;
+.containerLogin {
     width: 100%;
-    height: 100vh;
+    max-width: 100vh;
+    
     padding: 20px;
 }
 
@@ -33,15 +33,13 @@
     justify-content: center;
 
     width: 100%;
-    height: 26em;
-
-    gap: 2em;
+    height: 15em;
 }
 
 .imagemLogo {
     color: white;
-    width: 160px;
-    height: 160px;
+    width: 80px;
+    height: 80px;
 }
 
 .tituloLogo {
@@ -49,6 +47,8 @@
 
     font-weight: 500;
     font-size: 27px;
+
+    margin-bottom: 5px;
 }
 
 .boxInput {
@@ -58,9 +58,7 @@
     width: 100%;
     height: 15em;
 
-    justify-content: center;
-
-    gap: 25px;
+    justify-content: space-between;
 }
 
 .inputStyle {
@@ -108,10 +106,8 @@
 .EsqueciCriar {
     display: flex;
 
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-
-    gap: 10em; 
 
     margin-top: 5em;
 }
